# novikov-statistic-bot

./: .gitignore  Makefile  README.md  bot.py  notifier.py  prepare.py  pyproject.toml  scheduler.py  updater.py
service/: db.py  landings.py  spredsheet.py
